--- a/.github/workflows/master_cst323app.yml
+++ b/.github/workflows/master_cst323app.yml
@@ -59,5 +59,5 @@ jobs:
         with:
           app-name: 'cst323app'
           slot-name: 'Production'
-          package: '*.war'
+          package: '*.jar'
           
