--- a/.github/workflows/master_cst323app.yml
+++ b/.github/workflows/master_cst323app.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.war'
+          path: '${{ github.workspace }}/cst323/app/target/*.jar'
 
   deploy:
     runs-on: windows-latest
@@ -59,5 +59,5 @@ jobs:
         with:
           app-name: 'cst323app'
           slot-name: 'Production'
-          package: '*.war'
+          package: '*.jar'
           
