--- a/.github/workflows/master_cst323app.yml
+++ b/.github/workflows/master_cst323app.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
-        working-directory: ./cst323/app
+        working-directory: ./cst323
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
