--- a/.github/workflows/master_cst323app.yml
+++ b/.github/workflows/master_cst323app.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: java-app
-          path: '${{ github.workspace }}/cst323/app/target/*.jar'
+          path: '${{ github.workspace }}/app/target/*.jar'
 
   deploy:
     runs-on: windows-latest
