--- a/.github/workflows/master_cst323app.yml
+++ b/.github/workflows/master_cst323app.yml
@@ -23,13 +23,12 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
-        working-directory: ./app
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: java-app
-          path: '${{ github.workspace }}/app/target/*.jar'
+          path: '${{ github.workspace }}/target/*.war'
 
   deploy:
     runs-on: windows-latest
@@ -49,9 +48,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_0E828A79ACCC45F4806EA25098231667 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_F89357B5FEDA41DF97CC805E3F71AB2B }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_778824A22C06496F8730FA47BB041836 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_42D34495A30D4B709B088416C0FC0648 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_C86CFEC590EB407398D626089B1A36F9 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_1A5B5A9987D2445680E6F13533986C31 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -59,5 +58,5 @@ jobs:
         with:
           app-name: 'cst323app'
           slot-name: 'Production'
-          package: '*.jar'
+          package: '*.war'
           
