--- a/.github/workflows/master_cst323app.yml
+++ b/.github/workflows/master_cst323app.yml
@@ -23,12 +23,13 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
+        working-directory: ./app
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.war'
+          path: '${{ github.workspace }}/app/target/*.jar'
 
   deploy:
     runs-on: windows-latest
@@ -58,5 +59,5 @@ jobs:
         with:
           app-name: 'cst323app'
           slot-name: 'Production'
-          package: '*.war'
+          package: '*.jar'
           
