--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # Database Configuration
-spring.datasource.url=jdbc:mysql://cst232app.mysql.database.azure.com:3306/users?useSSL=true&requireSSL=true
-spring.datasource.username=Dempsey
-spring.datasource.password=Squid735!
+spring.datasource.url=jdbc:mysql://wvulqmhjj9tbtc1w.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/jd26h06jfn0egoc6?useSSL=true&requireSSL=true
+spring.datasource.username=m5m36k7d4tflctwm
+spring.datasource.password=s08n2e4qqs7ba1tl
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=${PORT:8080}
+#server.port=${PORT:8080}
 
 
 
