--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database Configuration
-spring.datasource.url=jdbc:mysql://hostname=cst232app.mysql.database.azure.com:3306/users?useSSL=true&requireSSL=true
+spring.datasource.url=jdbc:mysql://cst232app.mysql.database.azure.com:3306/users?useSSL=true&requireSSL=true
 spring.datasource.username=Dempsey
 spring.datasource.password=Squid735!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
