--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Database Configuration
-spring.datasource.url=jdbc:mysql://awseb-e-wppadgbc3r-stack-awsebrdsdatabase-lfmtdhh7alea.c9kkom62uqks.us-east-2.rds.amazonaws.com:3306/users?useSSL=true
-spring.datasource.username=dempseyevans
+spring.datasource.url=jdbc:mysql://cst232app.mysql.database.azure.com:3306/users?useSSL=true&requireSSL=true
+spring.datasource.username=Dempsey
 spring.datasource.password=Squid735!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
