--- a/.github/workflows/master_cst323.yml
+++ b/.github/workflows/master_cst323.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -24,15 +24,16 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
+        working-directory: ./app
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.war'
+          path: '${{ github.workspace }}/app/target/*.jar'
 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build
     environment:
       name: 'Production'
@@ -59,5 +60,5 @@ jobs:
         with:
           app-name: 'Cst323'
           slot-name: 'Production'
-          package: '*.war'
+          package: '*.jar'
           
