--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # Database Configuration
 spring.datasource.url=jdbc:mysql://awseb-e-wppadgbc3r-stack-awsebrdsdatabase-lfmtdhh7alea.c9kkom62uqks.us-east-2.rds.amazonaws.com:3306/users?useSSL=true&requireSSL=true
-spring.datasource.username=Dempsey
+spring.datasource.username=dempseyevans
 spring.datasource.password=Squid735!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=${PORT:8080}
+#server.port=${PORT:8080}
 
 
 
